--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
             --jobs=4 \
             --logviewer-command=cat \
             --mode=gcc-11.4.0 \
-            --enable-languages=c,c++ \
+            --enable-languages=c,c++,fortran \
             --arch=${{ matrix.arch }} \
             --exceptions=${{ matrix.eh }} \
             --threads=posix \
