--- a/build
+++ b/build
@@ -164,7 +164,8 @@ readonly RUN_ARGS="$@"
 	echo "    gcc-11.1.0 (11.1.0 release)"
 	echo "    gcc-11.2.0 (11.2.0 release)"
 	echo "    gcc-11.4.0 (11.4.0 release)"
-	echo "    gcc-11-branch (currently 11.3.0-prerelease)"
+	echo "    gcc-11.5.0 (11.5.0 release)"
+	echo "    gcc-11-branch (currently 11.5.1-prerelease)"
 	echo "    gcc-trunk (currently 12.0.0-snapshot)"
 
 	exit 0
